[package]
name = "async_fsm"
version = "0.1.4"
edition = "2021"
license = "MIT"
keywords = ["fsm", "async_fsm"]
description = "Async Finite State Machine"
repository = "https://github.com/lookas/async_fsm"
authors = [ "Lukasz Lewinski <lewinskilukas@gmail.com>" ]
readme = "../README.md"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
