[package]
name = "async_fsm_bake"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lukasz Lewinski <lewinskilukas@gmail.com>"]
description = "A CLI tool to generate async_fsm code snippets from plantuml diagram."
keywords = ["cli", "tool", "snippet", "async_fsm", "async_fsm_bake"]
categories = ["command-line-utilities"] 
include = ["src", "templates"]

[dependencies]
regex = "1.11.1"
askama = "0.14.0"
clap = { version = "4.5", features = [ "unstable-doc" ]}
